nesc-frontend/src/test/resources/integration/programs/bad/bad17/M.nc
module M
{
   provides interface I;
}
implementation
{
   command void I.c()
   {
      return;
   }
}
